# note

./: .gitignore  base64_str.py  readme.md  todo.md
formwork/be/include/: main.h
formwork/be/src/: main  main.cpp
东方国信工作资料/compaction/: Compaction任务升级方案.md  Compaction旧任务升级功能实现方案.docx  Compaction旧任务升级功能实现方案v1.2.docx  compaction自动任务方案.html  compaction自动任务方案.md  compaction重构介绍ppt思维导图.md
东方国信工作资料/diskio相关Profile/: hdfsiousage实现.md
东方国信工作资料/doris/: conf_vscode.md  doris_index.md  doris_index_part1.html  doris_index_part1.md  gbkload.md  index_class.md
东方国信工作资料/带有bitshuffle编码压缩调研/: 对于行云使用bitshuffle编码的想法.md
东方国信工作资料/点查询/: detailed_design_code.cpp  impala查询方案调研.md  pageindex过滤相关功能.md  无序表点查询优化方案与测试结果分析.md
东方国信工作资料/编码压缩/: 对于行云使用bitshuffle编码的想法.md  编码策略.md
学习笔记/: 书籍资料.md  网站资料.md
学习笔记/c++/: note.md  宏定义.md  常用的stl函数.md  常用的网站.md  环境变量.md
学习笔记/cmake/: cmake学习笔记.md
学习笔记/formwork/: Makefile
学习笔记/gdb/: gdb打印stl.md  gdb相关指令.md
学习笔记/kafka/: 基础操作.md
学习笔记/linux/: shell常见问题.md  环境变量.md
学习笔记/markdown/: Markdown速查表.md  技术文档常用符号对照表.md
学习笔记/tool/: readme.md
学习笔记/工程构建/覆盖率/示例/cmake/: CMakeLists.txt  run_coverage.sh
学习笔记/工程构建/覆盖率/示例/cmake/include/: math_utils.h
学习笔记/工程构建/覆盖率/示例/cmake/src/: main.cpp
搭建VScode与github环境/: docker相关.md  java环境搭建.md  launch_json介绍.md  vscode下载与安装.md  vscode与github环境连接的搭建.md  vscode配置.md  安装与配置plantuml相关环境.md  配置ssh.md
搭建VScode与github环境/c++环境搭建/: .clang-format  .clang-tidy  clang-format.md  clang-tidy.md  cpp.json  launch_json介绍.md  task_json介绍.md  vscode调试c++配置.md  代码注释.md
搭建VScode与github环境/c++调试环境搭建/: vscode调试c++配置.md
(+110 files in other folders)
